fix: more flexible wrap patterns for commands

--- a/webview-ui/test-generation/src/TestStep.scss
+++ b/webview-ui/test-generation/src/TestStep.scss
@@ -114,7 +114,13 @@ section.test-step {
 .commands {
   .command {
     margin: 4px;
+
+    code {
+      display: flex;
+      flex-wrap: wrap;
+    }
   }
+
   .alternatives {
     .toggle {
       display: flex;
